Tests/RunCMake/CMakePresets/InvalidPresets-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/InvalidPresets:
Error: @3,23: Invalid "configurePresets" field
  "configurePresets": {}
                      \^$
